# OS_UNIBO

./: .Makefile.swp  .gitignore  AUTHORS  Cross_compilation.info  Makefile  Note  README  cleanANDcompile.sh  configure.ac  const.h  exceptions.c  exceptions.h  initial.c  interrupts.c  interrupts.h  listx.h  main.c  mikabooq.c  mikabooq.h  p1test.c  p1test.elf  p1test.elf.core.uarm  p1test.elf.stab.uarm  p1test_compile.sh  p2test.c  p2test.elf.core.uarm  p2test.elf.stab.uarm  p2test_compile.sh  readme.md  test_pt1
Documentation/: .~lock.Documentazione.odt#  .~lock.Untitled 1.odt#  .~lock.documentazioneMikaBoo.odt#  DOCUMENTATION  Documentazione.odt  TODO  Untitled 1.odt  documentazioneMikaBoo.odt
bleeding-edge/: scheduler.c  schedulerOLD.CI
elf-files/: p2test.elf  p2test.elf.core.uarm  p2test.elf.stab.uarm
old-files/: p1test_compile.sh  p2test_compile.sh
project/: mikabooq.c  mikabooq.h  test.c
src/: accounting.c  accounting.h  bitmap.h  create_process.c  create_thread.c  debug_tests.c  debug_tests.h  do_io.c  do_io.h  do_io_s.h  exceptions.c  exceptions.h  get_errno.c  get_id.c  getcputime.c  handlers.h  init.c  initial.c  interrupts.c  interrupts.h  listx.h  mikabooq.c  mikabooq.h  nucleus.h  p1test.c  p2test.c  p2test.h  p2test_0.0.1.c  p2test_0.0.1.h  prgtrap.c  prgtrap.h  pseudoclock.c  pseudoclock.h  scheduler.c  scheduler.h  services.h  setmgr.c  ssi.c  ssi.h  stopwatch.h  (+13 more)
src/SSI/: ssi.c  ssi.h
src/clock/: accounting.c  accounting.h
src/handlers/: IPC_primitives.c  handlers.h  interrupts.c  interrupts.h  syscall.c  trap.c
src/pid_manager/: main.c  (+5 more)
(+28 files in other folders)
